# $Id: Makefile.am,v 1.47 2009/07/31 16:22:51 ellson Exp $ $Revision: 1.47 $
## Process this file with automake to produce Makefile.in

SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
	vpsc rbtree ortho sparse patchwork expr common \
	pack xdot gvc ingraphs topfish glcomp \
	circogen dotgen fdpgen neatogen twopigen sfdpgen osage gvpr

EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
